# llm_infer

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/config/: CMakeLists.txt  config.hpp
src/core/memory/: CMakeLists.txt  buffer.cpp  buffer.hpp  memory_manager.cpp  memory_manager.hpp
src/core/status/: CMakeLists.txt  status.cpp  status.hpp
src/core/type/: CMakeLists.txt  type.hpp
src/kernel/: CMakeLists.txt  kernel.cpp  kernel.hpp
src/kernel/cpu/: CMakeLists.txt  add_kernel_cpu.cpp  add_kernel_cpu.hpp  embedding_kernel_cpu.cpp  embedding_kernel_cpu.hpp  matmul_kernel_cpu.cpp  matmul_kernel_cpu.hpp  mha_kernel_cpu.cpp  mha_kernel_cpu.hpp  rmsnorm_kernel_cpu.cpp  rmsnorm_kernel_cpu.hpp  rope_kernel_cpu.cpp  rope_kernel_cpu.hpp  softmax_kernel_cpu.cpp  softmax_kernel_cpu.hpp  swiglu_kernel_cpu.cpp  swiglu_kernel_cpu.hpp
src/kernel/gpu/: CMakeLists.txt  add_kernel_gpu.cu  add_kernel_gpu.cuh  embedding_kernel_gpu.cu  embedding_kernel_gpu.cuh  matmul_kernel_gpu.cu  matmul_kernel_gpu.cuh  mha_kernel_gpu.cu  mha_kernel_gpu.cuh  rmsnorm_kernel_gpu.cu  rmsnorm_kernel_gpu.cuh  rope_kernel_gpu.cu  rope_kernel_gpu.cuh  swiglu_kernel_gpu.cu  swiglu_kernel_gpu.cuh
src/layer/: CMakeLists.txt  embedding_layer.cpp  embedding_layer.hpp  layer.cpp  layer.hpp  linear_layer.cpp  linear_layer.hpp  mha_layer.cpp  mha_layer.hpp  rmsnorm_layer.cpp  rmsnorm_layer.hpp  rope_layer.cpp  rope_layer.hpp  swiglu_layer.cpp  swiglu_layer.hpp  vec_add_layer.cpp  vec_add_layer.hpp
src/op/: CMakeLists.txt  layer.hpp
src/tensor/: CMakeLists.txt  tensor.cpp  tensor.hpp
test/: CMakeLists.txt
test/core/: CMakeLists.txt
test/core/memory/: CMakeLists.txt  run_test.sh  test_buffer.cpp  test_memory_manager.cpp
test/core/status/: CMakeLists.txt  test_status.cpp
test/core/type/: CMakeLists.txt  test_type.cpp
test/kernel/: CMakeLists.txt
test/kernel/cpu/: CMakeLists.txt  test_add_kernel_cpu.cpp  test_embedding_kernel_cpu.cpp  test_matmul_kernel_cpu.cpp  test_mha_kernel_cpu.cpp  test_rmsnorm_kernel_cpu.cpp  test_rope_kernel_cpu.cpp  test_softmax_kernel_cpu.cpp  test_swiglu_kernel_cpu.cpp
test/kernel/gpu/: CMakeLists.txt  test_add_kernel_gpu.cpp  test_embedding_kernel_gpu.cpp  test_matmul_kernel_gpu.cpp  test_mha_kernel_gpu.cpp  test_rmsnorm_kernel_gpu.cpp  test_rope_kernel_gpu.cpp  test_swiglu_kernel_gpu.cpp
test/layer/: CMakeLists.txt  test_embedding_layer.cpp  test_linear_layer.cpp  test_mha_layer.cpp  test_rmsnorm_layer.cpp  test_rope_layer.cpp  test_swiglu_layer.cpp  test_vec_add_layer.cpp
test/tensor/: CMakeLists.txt  test_tensor.cpp
